welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:6: error: not found: value tab
		tab(i) = getCouleurSol()
                ^Array2:18: error: not found: value tab
		setCouleurBrosse(tab(k)+decalage)
                                 ^